<resources>
    <string name="app_name">Andin</string>
    <string name="mapbox_access_token">pk.eyJ1IjoicGlldGVyLWZpZXJzIiwiYSI6ImNrNHBneGg4ZzBsaGIzZnBsY2dkOHl6MHAifQ.OlGQsAeFwh5f_NjJsmI1dw</string>
    <string name="default_andin_host">home.ubipo.net</string>
    <string name="room_intent_label">Label Room inent</string>

    <string name="ref_abrv">Ref</string>
    <string name="address">Address</string>
    <string name="search">Search</string>
    <string name="app_label">Andin</string>
    <string name="search_hint">Room name or ref</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preferences">Preferences</string>
    <string name="map">Map</string>
    <string name="favorites">Favorites</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="andin">Andin</string>
    <string name="app_description">Android indoor viewer</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="no_favorites">You don\'t have any favorites yet, add some by tapping the ❤ icon when viewing a room</string>
    <string name="searching">Searching…</string>
    <string name="open_in_app">Open in app</string>
    <string name="in_app">In app</string>
    <string name="technical_info">Technical info</string>
    <string name="favorite_room">Favorite room</string>
    <string name="navigate">Navigate</string>
    <string name="share">Share</string>
    <string name="depart_from_this_room">Depart from this room</string>
    <string name="navigate_to_this_room">Navigate to this room</string>
    <string name="departure">Departure:</string>
    <string name="destination">Destination:</string>
    <string name="currently_set_as">Currently set as:</string>
    <string name="current_departure">Current departure: </string>
    <string name="currently">Currently:</string>
    <string name="start_typing_in_the_search_box_above">Start typing in the search box above</string>
</resources>
