<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="net.pfiers.andin.view.fragments.support.ChooseNavDepartDestFragment">

    <data>

        <variable
            name="mapElement"
            type="net.pfiers.andin.model.map.IndoorMapElement" />

        <import type="net.pfiers.andin.model.map.LvlKt" alias="Lvl" />

        <variable
            name="vm"
            type="net.pfiers.andin.MapViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility='@{(vm.departure.elem == mapElement || vm.destination.elem == mapElement)}'
            android:id="@+id/currently"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/currently_set_as"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:text='@{vm.departure.elem == mapElement ? (vm.destination.elem == mapElement ? "Destination and departure" : "Departure") : "Destination" }'
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle='@{(vm.destination == null || vm.destination.isUnnamed) ? "cursive" : "normal"}'
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:text="None set" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility='@{(vm.departure.elem != mapElement)}'
            android:id="@+id/departure"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/depart_from_this_room"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintBottom_toTopOf="@+id/textView7"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:text="@string/currently"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:text='@{(vm.departure != null) ? (vm.departure.isUnnamed ? vm.departure.unnamedLabel : vm.departure.label) + ", level " + Lvl.str(vm.departure.level) : "none"}'
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle='@{(vm.departure == null || vm.departure.isUnnamed) ? "cursive" : "normal"}'
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                tools:text="none" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:contentDescription="@string/favorite_room"
                android:src="@drawable/ic_departure"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_departure" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility='@{(vm.destination.elem != mapElement)}'
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/navigate_to_this_room"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintBottom_toTopOf="@+id/textView8"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:text="@string/currently"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:text='@{(vm.destination != null) ? (vm.destination.isUnnamed ? vm.destination.unnamedLabel : vm.destination.label) + ", level " + Lvl.str(vm.destination.level) : "none"}'
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle='@{(vm.destination == null || vm.destination.isUnnamed) ? "cursive" : "normal"}'
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                tools:text="none" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:contentDescription="@string/favorite_room"
                android:src="@drawable/ic_destination"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_destination" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>