<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="net.pfiers.andin.view.fragments.support.NavInfoBsFragment">

    <data>

        <import type="net.pfiers.andin.model.nav.DbGraphKt" alias="Graph" />

        <import type="net.pfiers.andin.model.map.LvlKt" alias="Lvl" />

        <variable
            name="vm"
            type="net.pfiers.andin.MapViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/departureGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:contentDescription="@string/favorite_room"
                android:src="@drawable/ic_departure"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_departure" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/departure"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:text='@{(vm.departure != null) ? (vm.departure.isUnnamed ? vm.departure.unnamedLabel : vm.departure.label) + ", level " + Lvl.str(vm.departure.level) : "None set"}'
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle='@{(vm.departure == null || vm.departure.isUnnamed) ? "cursive" : "normal"}'
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="1.0"
                tools:text="None set" />

            <ImageView
                android:id="@+id/departureSearchButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/departureClearButton"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorPrimary" />

            <ImageView
                android:visibility="@{vm.departure != null}"
                android:id="@+id/departureClearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorPrimary" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/destinationGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:contentDescription="@string/favorite_room"
                android:src="@drawable/ic_destination"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_destination" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/destination"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:text='@{(vm.destination != null) ? (vm.destination.isUnnamed ? vm.destination.unnamedLabel : vm.destination.label) + ", level " + Lvl.str(vm.destination.level) : "None set"}'
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle='@{(vm.destination == null || vm.destination.isUnnamed) ? "cursive" : "normal"}'
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:text="None set" />

            <ImageView
                android:id="@+id/destinationSearchButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/destinationClearButton"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorPrimary" />

            <ImageView
                android:visibility="@{vm.destination != null}"
                android:id="@+id/destinationClearButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorPrimary" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:visibility="@{vm.path != null}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="24dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_distance"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text='@{Graph.distanceStr(vm.path)}'
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView7"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="AAAAAAA" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="24dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_timer"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text='@{Graph.timeStr(vm.path)}'
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView6"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="AAAAAAA" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>